[gd_scene load_steps=9 format=3 uid="uid://grgj5wuhyy0d"]

[ext_resource type="Script" uid="uid://ba3np8k87musb" path="res://src/environment/props/checkpoint/checkpoint.gd" id="1_nm56h"]
[ext_resource type="PackedScene" uid="uid://b72gbk40c37jy" path="res://src/environment/indicator_label/indicator_label.tscn" id="2_ijix8"]

[sub_resource type="TorusMesh" id="TorusMesh_f6urv"]
inner_radius = 0.05
outer_radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b84rc"]
albedo_color = Color(0.345098, 0.882353, 0.478431, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_8m0oe"]
top_radius = 0.0
bottom_radius = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8c3vb"]
albedo_color = Color(0.760784, 0, 0.713726, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7w0rq"]
radius = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t1ytc"]
radius = 3.0

[node name="Checkpoint" type="StaticBody3D"]
collision_layer = 2
script = ExtResource("1_nm56h")

[node name="TorusMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.873038, 0)
mesh = SubResource("TorusMesh_f6urv")
surface_material_override/0 = SubResource("StandardMaterial3D_b84rc")

[node name="BaseMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_8m0oe")
surface_material_override/0 = SubResource("StandardMaterial3D_8c3vb")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_7w0rq")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 2

[node name="Collision" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("CylinderShape3D_t1ytc")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2)

[node name="Label" parent="." instance=ExtResource("2_ijix8")]

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
